  * Fixed bug where failed stmt execution caused later statements
    to fail with mysql_stmt_reset
  * Added tests for unsupported statements
  * Added test for test of failed statement with subsequent executes 
    (thanks to Martin Evans!)
  * Added typo fix (Martin Evans)
  * Removed old emulated driver tests (HOORAY!)
  * Cleaned up debug printing code

2006-01-31 Patrick Galbraith <patg@mysql.com> (3.0002_5)
  * Fixed bugs 15546 (selectcol_arrayref failing on SHOW TABLES)
    and 15665, 'USE dbname' failing when driver is not in emulated
    prepare mode

2005-10-26 Patrick Galbraith <patg@mysql.com> (3.0002_4)
  * Added Guy Harrison's patch for multiple result sets
  * Fixed bugs with declarations in middle of functions
  * Cleaned up code, rewrote several loops using pointers
    instead of iterators
  * Rewrote 'SHOW', 'ALTER', 'CALL', 'CREATE' toggling code that turns
    off server prepared statements (these calls are not supported)
  * Updated documentation

2005-09-28 Patrick Galbraith <patg@mysql.com> (3.0002_3)
  * Added code to  mysql_st_internal_execute that determines whether the
    SV *h is a sth or dbh, and then imports imp_dbh appropriately

2005-09-26 Patrick Galbraith <patg@mysql.com> (3.0002_2)
  * Fixed bug in dbd_st_execute where imp_sth was being 
    imported unecessarily, when only imp_dbh is needed. This caused a 
    core dump in some cases. Thanks to Andy Maas at Proofpoint for his 
    execellent detective work!
  * Small changes to Makefile.PL to make sure --ps-protocol works as
    advertised.
  * Updated install.html with current info about prepared statements and FC
    RPM/YUM packages.

2005-08-04 Patrick Galbraith <patg@mysql.com> (3.0002_1)
  * Prepared statement support is default now. To turn it off
    a parameter 'mysql_emulated_prepare' must be turned ON
  * Better error handling in mysql_internal_execute_ps (renamed
    from mysql_internal_execute41). Also free the result if error -