@@ -13,20 +13,15 @@ t/41blobs_prepare.t
 t/50chopblanks.t
 t/50commit.t
 t/60leaks.t
-t/akmisc.t
-t/ak-dbd.t
 t/dbdadmin.t
 t/lib.pl
 t/insertid.t
 t/mysql.dbtest
-t/mysql.t
-t/mysql2.t
+t/texecute.t
 lib/DBD/mysql/GetInfo.pm
 lib/DBD/mysql/INSTALL.pod
 lib/DBD/mysql.pm
 lib/Bundle/DBD/mysql.pm
-lib/Mysql/Statement.pm
-lib/Mysql.pm
 TODO
 myld
 constants.h
