@@ -11,6 +11,7 @@
   * Added typo fix (Martin Evans)
   * Removed old emulated driver tests (HOORAY!)
   * Cleaned up debug printing code
+  * Fixed syntax for create table ENGINE=InnoDB isntead of type=innobase
 
 2006-01-31 Patrick Galbraith <patg@mysql.com> (3.0002_5)
   * Fixed bugs 15546 (selectcol_arrayref failing on SHOW TABLES)
